# crewai_sales_meeting

./: README.md  RESULTADO.ipynb  RESULTADO.txt  pyproject.toml  uv.lock.backup
db/: chroma.sqlite3
outputs/: sales_meeting_prep_salesforce_2025-05-20_10-16.md  sales_meeting_prep_salesforce_2025-06-20_07-47.md  sales_meeting_prep_salesforce_2025-08-07_19-52.md
src/sales_meeting_preparation/: crew.py  main.py
src/sales_meeting_preparation/config/: agents.yaml  tasks.yaml
