[project]
name = "sales_meeting_preparation"
version = "0.1.0"
description = "sales_meeting_preparation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12.0"
dependencies = [
    "crewai>=0.157.0",
    "chromadb>=1.0.0"
]

[project.scripts]
sales_meeting_preparation = "sales_meeting_preparation.main:run"
run_crew = "sales_meeting_preparation.main:run"
train = "sales_meeting_preparation.main:train"
replay = "sales_meeting_preparation.main:replay"
test = "sales_meeting_preparation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
